# OcamCpp

./: CMakeLists.txt  README.md  ocam_cpp.files
src/: calib_data.cpp  cost_function.cpp  find_extrinsic_parameters.cpp  least_square_optimization.cpp  main.cpp  omni3d2pixel.cpp  utilities.cpp
